--- a/public/rev-manifest.json
+++ b/public/rev-manifest.json
@@ -1,12 +1,34 @@
 {
+  "fonts/AvenirNextLTCom-DemiCn.svg": "fonts/AvenirNextLTCom-DemiCn-33d85985ca.svg",
+  "fonts/AvenirNextLTCom-DemiCn.ttf": "fonts/AvenirNextLTCom-DemiCn-bd9f4c3292.ttf",
+  "fonts/AvenirNextLTCom-DemiCn.woff": "fonts/AvenirNextLTCom-DemiCn-383a6f9986.woff",
+  "fonts/AvenirNextLTCom-MediumCn.eot": "fonts/AvenirNextLTCom-MediumCn-1ced96d147.eot",
+  "fonts/AvenirNextLTCom-MediumCn.svg": "fonts/AvenirNextLTCom-MediumCn-da6acfc9c6.svg",
+  "fonts/AvenirNextLTCom-MediumCn.ttf": "fonts/AvenirNextLTCom-MediumCn-831ddb5e78.ttf",
+  "fonts/AvenirNextLTCom-MediumCn.woff": "fonts/AvenirNextLTCom-MediumCn-8e8128454d.woff",
   "fonts/fontawesome-webfont.eot": "fonts/fontawesome-webfont-674f50d287.eot",
   "fonts/fontawesome-webfont.svg": "fonts/fontawesome-webfont-912ec66d75.svg",
   "fonts/fontawesome-webfont.ttf": "fonts/fontawesome-webfont-b06871f281.ttf",
   "fonts/fontawesome-webfont.woff": "fonts/fontawesome-webfont-fee66e712a.woff",
   "fonts/fontawesome-webfont.woff2": "fonts/fontawesome-webfont-af7ae505a9.woff2",
-  "images/blendid-logo.svg": "images/blendid-logo-c8284496b8.svg",
+  "fonts/icon-wse.svg": "fonts/icon-wse-7d0cb7aef6.svg",
+  "fonts/icon-wse.ttf": "fonts/icon-wse-d2a53bdfe7.ttf",
+  "fonts/icon-wse.woff": "fonts/icon-wse-0ab000a616.woff",
+  "images/backgrounds/bg-404.gif": "images/backgrounds/bg-404-70faaa22a2.gif",
+  "images/backgrounds/bg-testimonial.jpg": "images/backgrounds/bg-testimonial-63122239c0.jpg",
+  "images/backgrounds/icon-faq.png": "images/backgrounds/icon-faq-24314e3773.png",
+  "images/backgrounds/pattern-wse.png": "images/backgrounds/pattern-wse-dc48ecd324.png",
   "images/icons.svg": "images/icons-6c9c3ba8dc.svg",
-  "javascripts/app.js": "javascripts/app-5bd3bb829ccdf1cf2e7c.js",
-  "stylesheets/app.css": "stylesheets/app-1b8972eb77.css",
-  "stylesheets/editor.css": "stylesheets/editor-f94ec837c9.css"
+  "images/icons/icon-contact.png": "images/icons/icon-contact-0b0ad45922.png",
+  "images/icons/icon-wse.png": "images/icons/icon-wse-723f775921.png",
+  "images/misc/Ilustracion-Mapa-Centros.png": "images/misc/Ilustracion-Mapa-Centros-fd7ad3caaa.png",
+  "images/misc/bg-404.gif": "images/misc/bg-404-70faaa22a2.gif",
+  "images/misc/icon-contact.png": "images/misc/icon-contact-0b0ad45922.png",
+  "images/misc/img-map.png": "images/misc/img-map-293641c126.png",
+  "images/misc/log-footer.png": "images/misc/log-footer-95948e2543.png",
+  "images/misc/log-landing.png": "images/misc/log-landing-ea2da64e36.png",
+  "images/misc/log-pearson.png": "images/misc/log-pearson-d82091620e.png",
+  "images/misc/log-wse.png": "images/misc/log-wse-031dbbc6d0.png",
+  "javascripts/app.js": "javascripts/app-624e113f019fae9010e1.js",
+  "stylesheets/app.css": "stylesheets/app-31e2f5f9a3.css"
 }
